# epint

./: .cursorignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  CONTRIBUTING.md  ENHANCED_SEARCH_README.md  GELISMELER.txt  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  YAML_YAPI_ANALIZI.md  YAML_YAPI_FINAL_ANALIZ.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
docs/: profil-katsayilari.md
docs/wiki/: API-Reference.md  Examples.md  FAQ.md  Getting-Started.md  Home.md  Troubleshooting.md
examples/: datetime_methods.py  usage.py  usage_grid.py
old_epint/infrastructure/: __init__.py  date_range_helper.py  endpoint_manager.py  endpoint_models.py  endpoint_parser.py  exceptions.py  http_client.py  logger.py  request_builder.py  swagger_parser.py  validation_service.py
old_epint/resources/: __init__.py
old_epint/resources/endpoints/grid/: swagger.json
old_epint/resources/endpoints/gunici-trading/: swagger.json
old_epint/resources/endpoints/reconciliation-market/: swagger.json
old_epint/resources/endpoints/reconciliation-mof/: swagger.json
old_epint/resources/endpoints/reconciliation-res/: swagger.json
old_epint/resources/endpoints/registration/: swagger.json
old_epint/resources/endpoints/seffaflik-reporting/: swagger.json
src/epint/: __init__.py
src/epint/__priv__/: __init__.py  version.py
src/epint/endpoints/: __init__.py
src/epint/endpoints/balancing-group/: swagger.json
src/epint/endpoints/customer/: swagger.json
src/epint/endpoints/demand/: swagger.json
src/epint/endpoints/gop/: swagger.json
src/epint/endpoints/grid/: swagger.json
src/epint/endpoints/gunici/: swagger.json
src/epint/endpoints/gunici-trading/: swagger.json
src/epint/endpoints/pre-reconciliation/: swagger.json
src/epint/endpoints/reconciliation-bpm/: swagger.json
src/epint/endpoints/reconciliation-imbalance/: swagger.json
src/epint/endpoints/reconciliation-invoice/: swagger.json
src/epint/endpoints/reconciliation-market/: swagger.json
src/epint/endpoints/reconciliation-mof/: swagger.json
src/epint/endpoints/reconciliation-res/: swagger.json
src/epint/endpoints/registration/: swagger.json
src/epint/endpoints/seffaflik-electricity/: swagger.json
src/epint/endpoints/seffaflik-natural-gas/: swagger.json
src/epint/endpoints/seffaflik-reporting/: swagger.json
src/epint/infrastructure/: auth_manager.py  date_range_helper.py  datetime_utils.py  endpoint_manager.py  endpoint_models.py  endpoint_parser.py  http_client.py  json_encoder.py  parameter_matcher.py  parameter_validator.py  progress_bar.py  request_builder.py  service_config.py  swagger_parser.py  type_converter.py  validation_service.py
src/epint/models/: endpoint.py  endpoint_callable.py  endpoint_registry.py  request_model.py  response_model.py  swagger.py
src/epint/modules/authentication/: auth_manager.py
src/epint/modules/category_proxy/: __init__.py
src/epint/modules/data_fetcher/: __init__.py  date_checker.py  error_detector.py  page_collector.py  pagination_checker.py  recursive_fetcher.py  result_merger.py
src/epint/modules/date_range_handler/: __init__.py  data_fetcher.py  date_parser.py  error_detector.py  progress.py  result_merger.py
src/epint/modules/datetime/: __init__.py  main.py
src/epint/modules/error_handler/: __init__.py
src/epint/modules/http_client/: __init__.py  rate_limit_handler.py
src/epint/modules/pagination_handler/: __init__.py  page_collector.py
src/epint/modules/repr_formatter/: endpoint_repr.py
src/epint/modules/search/: find_closest.py  ipython_blockage.py  method_name_decorator.py
src/epint/modules/version/: __init__.py
src/epint/resources/endpoints/balancing-group/: balanceResponsibleGroup-services_approve.yaml  balanceResponsibleGroup-services_cancel.yaml  balanceResponsibleGroup-services_delete.yaml  balanceResponsibleGroup-services_general.yaml  balanceResponsibleGroupController-services.yaml  example.json
src/epint/resources/endpoints/customer/: customer-controller-services_general.yaml  customer-controller-services_history.yaml  customer-controller-services_list.yaml  customer-controller-services_update.yaml  customerController-services.yaml  swagger.json
src/epint/resources/endpoints/demand/: demand-aggregator-controller-services.yaml  demand-controller-services.yaml  eligible-consumer-controller-services.yaml  evacuation-ack-controller-services.yaml  evacuation-demand-controller-services.yaml  non-registered-metering-point-application-controller-services.yaml  period-controller-services.yaml  pre-notification-controller-services.yaml  sanction-controller-services.yaml  swagger.json
src/epint/resources/endpoints/gop/: collateralController-services.yaml  contractController-services.yaml  gateController-services.yaml  marketController-services.yaml  minMaxPriceController-services.yaml  minmaxprice-services_create.yaml  minmaxprice-services_delete.yaml  swagger.json  (+9 more)
src/epint/utils/: endpoint_model.py
tests/: README.md  conftest.py  test_auth_manager.py  test_category_resolution.py  test_datetime_utils.py  test_epint_methods.py  test_find_closest.py  test_method_name_decorator.py  test_request_model.py  test_response_model.py  test_swagger_model.py
(+190 files in other folders)
