[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epint"
dynamic = ["version"]
description = "Türkiye Enerji Piyasası Market Operatörünün API'lerinin Python versiyonu."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "metehanboy"},
    {name = "farukkornaz"},
    {name = "rumeysskara"},
]
keywords = ["epias", "energy", "api", "turkish", "electricity", "market"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/epint/epint"
Repository = "https://github.com/epint/epint"
Issues = "https://github.com/epint/epint/issues"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epint = ["endpoints/**/*.json"]

[tool.setuptools.dynamic]
version = {attr = "epint.modules.version.__version__"}
